--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                         Det blir brukt gjennomsiktighet for å danne refleksjon, og stjerner i form av polygon.
                         Himmelen består også av skyer tegnet med pensel som reflekterer solas farge.</p>
                         
+                        <p id="devices">Enheter :   Alienware 15 | Google Nexus 5x</p>
+                        
                         <div id="back">
                             <img src="assets/png/back.png" id="back-arrow"/>
                             <p id="back-txt">Tilbake</p>
