--- a/milky_way/index.html
+++ b/milky_way/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Milky Way</title>
+        <title>Our Solar System</title>
         
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="header-wrapper">
-            <p>A journey through the milky way</p>
+            <p>A journey through our solar system</p>
             <button id="startAnim">Start</button>
         </div>
         <div class="milky-anim">
