--- a/artificial/index.html
+++ b/artificial/index.html
@@ -31,7 +31,7 @@
                 
                 <ul>
                     <li><a href="tasks.html">Kode 1 Oppgaver</a></li>
-                    <li><a href="index.html">Eliminating The Human</a></li>
+                    <li><a href="index.html" class="active">Eliminating The Human</a></li>
                     <li><a href="24-hour-challenge.html">24 Uten Sosiale Medier</a></li>
                 </ul>
             </div>
