--- a/artificial/24-hour-challenge.html
+++ b/artificial/24-hour-challenge.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="tasks.html">Kode 1 Oppgaver</a></li>
                     <li><a href="index.html">Eliminating The Human</a></li>
-                    <li><a href="24-hour-challenge.html">24 Uten Sosiale Medier</a></li>
+                    <li><a href="24-hour-challenge.html" class="active">24 Uten Sosiale Medier</a></li>
                 </ul>
             </div>
             
