--- a/artificial/tasks.html
+++ b/artificial/tasks.html
@@ -31,7 +31,7 @@
                 </div>
                 
                 <ul>
-                    <li><a href="tasks.html">Kode 1 Oppgaver</a></li>
+                    <li><a href="tasks.html" class="active">Kode 1 Oppgaver</a></li>
                     <li><a href="index.html">Eliminating The Human</a></li>
                     <li><a href="24-hour-challenge.html">24 Uten Sosiale Medier</a></li>
                 </ul>
