--- a/artificial/tasks.html
+++ b/artificial/tasks.html
@@ -70,7 +70,7 @@
                     <div class="body">
                         <ol>
                             <li>
-                                Jeg her en rekke venner som jeg aldri har møtt ansikt til ansikt, og jeg har for det meste møtt dem gjennom programmering osv. Fordelen med at man aldri har møtt hverandre er at man til en viss grad er my mer virkelige mot hverandre. Det blir et mindre personlig forhold som fører til at personen ikke gjemmer seg bak et filter.
+                                Jeg har en rekke venner som jeg aldri har møtt ansikt til ansikt, og jeg har for det meste møtt dem gjennom programmering osv. Fordelen med at man aldri har møtt hverandre er at man til en viss grad er my mer virkelige mot hverandre. Det blir et mindre personlig forhold som fører til at personen ikke gjemmer seg bak et filter.
                             </li>
                             <li>
                                 Jeg mener at det er en stor forskjell mellom bruken. De eldre oppfører seg ofte på nettet ut fra de sosiale normene man har i virkeligheten, men ikke med de som man har skapt gjennom internettet. De eldre har ikke heller utviklet et behov for sosiale medier i livet sitt i motsetning til den yngre generasjonen.
