--- a/restore/topic.html
+++ b/restore/topic.html
@@ -67,7 +67,7 @@
       <div class="about-state">
         <div class="login-box">
           <img src="assets/svg/x.svg" class="exit-login" alt="exit"/>
-          <p class="header large-header about-header">About Restore</p>
+          <p class="header large-header about-header about-toggle">About Restore</p>
           <p class="desc">
             Restore was a project I created to educate people about advancements made in Artificial Inteligence. My
             Algorythm searches the web for articles about AI and presents it in a more readable fasion. With restore
